Change nvcc arch to sm_52; add clean target to the lib Makefile.

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,3 +1,5 @@
 all:
 	python setup.py build_ext --inplace
 	rm -rf build
+clean:
+	rm -rf pycocotools/_mask.c pycocotools/_mask.so nms/*.c nms/*.cpp nms/*.so utils/*.so utils/*.c
